--- a/styles.css
+++ b/styles.css
@@ -1,12 +1,13 @@
-body {
-  display: inline-flex;
+.container {
+  display: flex;
+  flex-direction: row;
   padding: 10px 16px;
   align-items: flex-start;
   gap: 12px;
   border-radius: 5px;
   background: #ffe4e4;
 }
-div {
+.text-container {
   display: flex;
   max-width: 358px;
   max-height: 64px;
@@ -14,6 +15,22 @@ div {
   justify-content: center;
   align-items: flex-start;
 }
+
+/* .container {
+  display: flex;
+  padding: 10px 16px;
+  align-items: flex-start;
+  gap: 12px;
+}
+
+.text-container {
+  display: flex;
+  width: 358px;
+  height: 64px;
+  flex-direction: column;
+  justify-content: center;
+  align-items: flex-start;
+} */
 img {
   width: 33px;
   height: 33px;
@@ -25,7 +42,7 @@ strong {
   font-size: 24px;
   font-style: normal;
   font-weight: 700;
-  line-height: 32px; /* 133.333% */
+  /* line-height: 32px; 133.333% */
   letter-spacing: -0.12px;
 }
 h1 {
@@ -35,7 +52,7 @@ h1 {
   font-size: 24px;
   font-style: normal;
   font-weight: 700;
-  line-height: 32px; /* 133.333% */
+  /* line-height: 32px; 133.333% */
   letter-spacing: -0.12px;
 }
 p {
@@ -45,6 +62,6 @@ p {
   font-size: 16px;
   font-style: normal;
   font-weight: 400;
-  line-height: 32px; /* 200% */
+  /* line-height: 32px; 200% */
   letter-spacing: -0.08px;
 }
